fixing issue on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   margin: auto;
 }
 .form-group{
-  width: 25%;
+  width: 35%;
 }
 
 .form-control{
@@ -21,7 +21,7 @@
 
 hr{
   margin: 4px;
-  width: 100%;
+  width: 95%;
 }
 
 .btn{
@@ -32,6 +32,7 @@ hr{
 
 .bg-image {
   position: absolute;
+  background-repeat: repeat;
   width: 100%;
   height: 100%;
   background-image: url(https://www.luggageteleport.com/wp-content/uploads/2017/09/homebg.png);
@@ -397,3 +398,29 @@ hr{
   vertical-align: top;
   font-weight: bold;
 }
+
+/* For Mobile Phone view */
+@media (max-width: 576px){
+  hr{
+    width: 250px;
+  }
+}
+
+
+/* enable absolute positioning */
+.inner-addon { 
+  position: relative; 
+}
+
+/* style icon */
+.inner-addon .glyphicon {
+position: absolute;
+padding: 10px;
+pointer-events: none;
+}
+
+/* align icon */
+.left-addon .glyphicon  { left:  0px;}
+
+/* add padding  */
+.left-addon input  { padding-left:  30px; }
